# speak2me-fitness-monorepo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: database.py  main.py
frontend/speak2me-fitness-monorepo/: package.json
myproject/myproject/: settings.py
myproject/myproject/features/meal_logging/: api.py  models.py  urls.py
speak2me-fitness-monorepo/: package-lock.json
